# crypto-futures-scanner

./: .env.example  .gitignore  README.md  pyproject.toml
scanner_agent/: __init__.py  cli.py  config.py  exchanges.py  http.py  models.py  news.py  persistence.py  risk.py  runner.py  scoring.py  telegram.py
tests/: test_position_sizing.py  test_scoring.py
